# Xpanse

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py
src/ai/: __init__.py  faction_ai.py  ship_ai.py  trade_routes.py
src/ai/behaviors/: __init__.py  base.py  drone.py  patrol.py  trading.py  waypoint.py
src/core/: __init__.py  ecs.py  events.py  registries.py  system_priority.py  transactions.py  world.py
src/data/: recipes.json  resources.json  solar_system.json
src/entities/: __init__.py  celestial.py  factions.py  ships.py  station_slots.py  stations.py  trails.py
src/simulation/: __init__.py  economy.py  events.py  freelancer.py  goals.py  production.py  resources.py  trade.py
src/solar_system/: __init__.py  bodies.py  orbits.py  sector_coords.py  sectors.py
src/systems/: __init__.py  building.py  save_load.py  ship_ai_v2.py  trail_system.py
src/ui/: __init__.py  camera.py  input.py  panels.py  renderer.py  sector_view.py  toolbar.py
tests/: __init__.py  test_economy.py  test_production.py  test_simulation.py
